<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:layout_marginTop="@dimen/header_size">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/text_field_gap"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="FORGOT YOUR PASSWORD"
                    android:textColor="@color/redcolor"
                    android:textSize="@dimen/fragment_text_size"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/text_field_gap">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgotdetail"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fragment_text_size"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_emailid"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:layout_marginTop="@dimen/text_field_gap" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edit_text_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:layout_marginBottom="@dimen/text_field_gap"
                    android:padding="@dimen/text_10dp" />

                <TextView
                    android:id="@+id/tv_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_send"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:background="@drawable/loginbtn"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"></LinearLayout>


</LinearLayout>
