<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:layout_marginTop="@dimen/header_size">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/text_field_gap">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_userid"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:layout_marginTop="@dimen/text_field_gap" />

                <EditText
                    android:id="@+id/et_userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edit_text_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:padding="@dimen/text_10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:layout_marginTop="@dimen/text_field_gap" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edit_text_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:layout_marginBottom="@dimen/text_field_gap"
                    android:padding="@dimen/text_10dp"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:layout_marginTop="@dimen/text_field_gap"
                    android:background="@drawable/loginbtn"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_field_gap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="0.9"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="OR"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/heading_text_size" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="0.9"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_field_gap"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/facebook" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/googleplus"

                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_field_gap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1.3"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/text_forgotpassword"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="@dimen/heading_text_size" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1.3"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_field_gap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/fragment_text_size" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/text_signup"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="@dimen/heading_text_size" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/dark_blue"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/fragment_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"></LinearLayout>


</LinearLayout>
